# dsa4213-assignment-3

./: .gitignore  README.md  pyproject.toml  train.py  train.sh
sweep_configs/: sweep_full_finetuning.yaml  sweep_lora.yaml  sweep_prompt_tuning_hard.yaml  sweep_prompt_tuning_soft.yaml
typst/: main.bib  main.typ
wandb/: latest-run
wandb/run-20251016_201757-lvvtyhdl/: run-lvvtyhdl.wandb
wandb/run-20251016_201944-zcwk3pmj/: run-zcwk3pmj.wandb
wandb/run-20251016_202115-gk2qse77/: run-gk2qse77.wandb
wandb/run-20251016_202306-txlw1op4/: run-txlw1op4.wandb
wandb/run-20251016_202340-bzs3eebh/: run-bzs3eebh.wandb
wandb/run-20251016_202419-8pjcl5cu/: run-8pjcl5cu.wandb
wandb/run-20251016_202726-o09wm28z/: run-o09wm28z.wandb
wandb/run-20251016_202756-x3ur720q/: run-x3ur720q.wandb
wandb/run-20251016_202812-iuhaifdi/: run-iuhaifdi.wandb
wandb/run-20251016_203040-aw4a6k7d/: run-aw4a6k7d.wandb
wandb/run-20251016_203237-fy66wyed/: run-fy66wyed.wandb
wandb/run-20251016_203320-yjkffgw4/: run-yjkffgw4.wandb
wandb/run-20251016_203348-tsad3j7q/: run-tsad3j7q.wandb
wandb/run-20251016_203634-3x2ydwjb/: run-3x2ydwjb.wandb
wandb/run-20251016_203657-gdgtmhiu/: run-gdgtmhiu.wandb
wandb/run-20251016_204010-b68om6pa/: run-b68om6pa.wandb
wandb/run-20251016_204044-ptdxn8i5/: run-ptdxn8i5.wandb
wandb/run-20251016_204205-l4p88sqj/: run-l4p88sqj.wandb
wandb/run-20251016_204315-cd9rxk7w/: run-cd9rxk7w.wandb
wandb/run-20251016_204517-rofrhk4z/: run-rofrhk4z.wandb
wandb/run-20251016_204622-soddxzks/: run-soddxzks.wandb
(+301 files in other folders)
