[project]
name = "dsa4213-assignment-3"
version = "0.1.0"
description = "DSA4213 Assignment 3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "peft>=0.17.1",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "wandb>=0.22.2",
]
